# CursorSlideGenerator

./: .cursorrules  .gitignore  README.md  marp-quick  page_splitter.py  pyproject.toml  quick_slides.py  slide_generator.py  watch_slides.py
example/: cursor_chat_history.md
example/momotaro-engineering/: index.md  master_slide.md
example/momotaro-engineering/01-桃太郎システム設計書/: page.md
example/momotaro-engineering/02-きびだんご駆動開発kdd/: page.md
example/momotaro-engineering/03-プロジェクト概要/: page.md
example/momotaro-engineering/04-要件定義/: page.md
example/momotaro-engineering/05-page5/: page.md
example/momotaro-engineering/06-初期化処理/: page.md
example/momotaro-engineering/07-system-initialization/: page.md
example/momotaro-engineering/08-page8/: page.md
example/momotaro-engineering/09-page9/: page.md
example/momotaro-engineering/11-リソース収集フェーズ/: page.md
example/momotaro-engineering/13-microservices-architecture/: page.md
example/momotaro-engineering/14-page14/: page.md
example/momotaro-engineering/15-page15/: page.md
example/momotaro-engineering/17-実装フロー/: page.md
example/momotaro-engineering/18-asynchronous-processing-flow/: page.md
example/momotaro-engineering/19-page19/: page.md
example/momotaro-engineering/20-page20/: page.md
example/momotaro-engineering/21-page21/: page.md
example/momotaro-engineering/22-page22/: page.md
example/momotaro-engineering/23-パフォーマンス分析/: page.md
example/momotaro-engineering/24-page24/: page.md
src/marp_slide_generator/: __init__.py  marp_formatter.py  page_splitter.py  regenerator.py  slide_generator.py
src/scripts/: marp_gen.py  marp_quick.py  marp_regenerate.py  marp_validate.py  marp_watch.py
(+24 files in other folders)
